<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_gravity="center"
        android:layout_margin="?actionBarSize"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/meditracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:autofillHints="@string/full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/toLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>