<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

        <TextView
            android:id="@+id/textViewNameProfile"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textViewMedicalHistory"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/history"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMedicalHistory"/>

        <TextView
            android:id="@+id/textViewDailyReport"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/report"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineChart"/>

        <TextView
            android:id="@+id/textViewDay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/day"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDailyReport"/>

        <Button
            android:id="@+id/buttonMinusScale"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:onClick="clickValue"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewDayScale"
            app:layout_constraintEnd_toStartOf="@+id/textViewDayScale"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewDayScale"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/five"
            app:layout_constraintEnd_toStartOf="@id/buttonPlusScale"
            app:layout_constraintStart_toEndOf="@id/buttonMinusScale"
            app:layout_constraintTop_toBottomOf="@+id/textViewDay"/>

        <Button
            android:id="@+id/buttonPlusScale"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:onClick="clickValue"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewDayScale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewDayScale"/>

        <TextView
            android:id="@+id/textViewFeel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/scale"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDayScale"/>

        <Button
            android:id="@+id/buttonMinusFeel"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:onClick="clickValue"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewFeelScale"
            app:layout_constraintEnd_toStartOf="@+id/textViewFeelScale"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewFeelScale"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/five"
            app:layout_constraintEnd_toStartOf="@id/buttonPlusFeel"
            app:layout_constraintStart_toEndOf="@id/buttonMinusFeel"
            app:layout_constraintTop_toBottomOf="@+id/textViewFeel"/>

        <Button
            android:id="@+id/buttonPlusFeel"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:onClick="clickValue"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewFeelScale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewFeelScale"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="clickSubmit"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFeelScale"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:onClick="clickLogout"
            android:text="@string/log_out"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmit"
            style="?android:attr/borderlessButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>